--- a/index.html
+++ b/index.html
@@ -37,12 +37,26 @@
         <div class="container">
             <div class="textbox">
                 <h2 class="textboxh">About me</h2>
-                <div class="textboxitem1" id="textboxitem">Hi, I'm Denis – UX/UI designer from Minsk. <br> </div>
-                <div class="textboxitem1" id="textboxitem">I'm interested in design and everything connected with it.</div>
-                <div class="textboxitem2" id="textboxitem">I'm studying at courses "Web and mobile design <br> </div>
-                <div class="textboxitem2" id="textboxitem">interfaces" in IT-Academy.</div>
-                <div class="textboxitem3" id="textboxitem">Ready to implement excellent projects <br> </div>
-                <div class="textboxitem3" id="textboxitem">with wonderful people.</div>
+                <div class="textboxitem" id="textboxitem">Hi, I'm Denis – UX/UI designer from Minsk. <br> </div>
+                <div class="textboxitem" id="textboxitem1">I'm interested in design and everything connected with it.</div>
+                <div class="textboxitem" id="textboxitem">I'm studying at courses "Web and mobile design <br> </div>
+                <div class="textboxitem" id="textboxitem1">interfaces" in IT-Academy.</div>
+                <div class="textboxitem" id="textboxitem">Ready to implement excellent projects <br> </div>
+                <div class="textboxitem" id="textboxitem1">with wonderful people.</div>
+            </div>
+        </div>
+    </section>
+    <section class="skills">
+        <div class="container">
+            <div class="skillbox">
+                <h2 class="skill">Skills</h2>
+                <div class="work">I work in such programs as</div>
+                    <div class="skimg">
+                    <img src="img/psh.png" class="skillimg" alt="">
+                    <img src="img/ilu.png" class="skillimg" alt="">
+                    <img src="img/aae.png" class="skillimg" alt="">
+                    <img src="img/fig.png" class="skillimg" alt="">
+                    </div>
             </div>
         </div>
     </section>
