--- a/index.html
+++ b/index.html
@@ -60,5 +60,18 @@
             </div>
         </div>
     </section>
+    <section class="portfolio">
+        <div class="container">
+            <div class="portfoliobox">
+                <h2 class="portf">Portfolio</h2>
+                <img src="img/wm.jpg" alt="" class="wm">
+                <div class="portdesctxt">Online fashion store - Homepage</div>
+                <img src="img/reebok_web.jpg" alt="" class="reebok">
+                <div class="portdesctxt">Reebok Store - Concept</div>
+                <img src="img/braun.jpg" alt="" class="braun">
+                <div class="portdesctxt" id="braun">Braun Landing Page - Concept</div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
