--- a/index.html
+++ b/index.html
@@ -73,5 +73,25 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footerbox">
+                <h2 class="cont">Contacts</h2>
+                <div class="contdesc">Want to know more or just chat? <br>
+                    You are welcome!
+                </div>
+                <button class="msg"><div class="btndesc">Send message</div></button>
+                <div class="imgcont">
+                    <img src="img/in.png" alt="" class="in">
+                    <img src="img/inst.png" alt="" class="inst">
+                    <img src="img/be.png" alt="" class="be">
+                    <img src="img/bask.png" alt="" class="bask">
+                </div>
+                <div class="footdescend">Like me on <br>
+                    LinkedIn, Instagram, Behance, Dribble</div>
+
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
